# pkg

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build-db.py  publish-release.sh
.github/workflows/: ci.yml
data/: aliases.json  npm.json  pip.json  post_install_check_skip.jsonc  stub_exclusions.json
post-install/: openssl.rs  python.rs
scripts/: build-db.py  publish-release.sh
src/: cli.rs  info.rs  install.rs  lib.rs  stubs.rs  vendor.rs
tests/: cli.rs
