[package]
name = "substrate"
version = "0.4.0"
edition = "2024"
autobins = false

[features]
gold-release = []

[[bin]]
name = "ss"
path = "src/bin/ss.rs"

[dependencies]
flate2 = "1"
indicatif = "0.17"
json5 = "0.4"
libc = "0.2"
rayon = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4.45"
tempfile = "3"
ureq = "2"
urlencoding = "2"
walkdir = "2"
